...
                                    <view contentMode="scaleToFill" verticalHuggingPriority="1000" translatesAutoresizingMaskIntoConstraints="NO" id="nYp-kD-I5a" customClass="CSAnimationView">
                                        <rect key="frame" x="0.0" y="0.0" width="307" height="227.5"/>
                                        <subviews>
                                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="a1J-Ak-5px">
                                                <rect key="frame" x="20" y="20" width="267" height="191.5"/>
                                                <subviews>
                                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="255" verticalHuggingPriority="1000" text="Bangumi M" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="C26-Ax-sCD">
                                                        <rect key="frame" x="0.0" y="0.0" width="267" height="20.5"/>
                                                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                        <fontDescription key="fontDescription" name="Optima-BoldItalic" family="Optima" pointSize="24"/>
                                                        <nil key="highlightedColor"/>
                                                        <attributedString key="userComments">
                                                            <fragment content="login view title">
...
                        </prototypes>
                        <connections>
                            <outlet property="dataSource" destination="nfM-dI-sad" id="9c7-JY-UZT"/>
                            <outlet property="delegate" destination="nfM-dI-sad" id="qTe-3I-Wkf"/>
                        </connections>
                    </tableView>
                    <navigationItem key="navigationItem" title="进度管理" id="pKx-5M-dCG">
                        <barButtonItem key="rightBarButtonItem" systemItem="search" id="kGe-bg-Q5F">
                            <connections>
                                <segue destination="G0n-4S-zwu" kind="presentation" modalPresentationStyle="fullScreen" id="7dE-N2-bfj"/>
                            </connections>
                        </barButtonItem>
                    </navigationItem>
...
                                                                    <rect key="frame" x="623" y="0.0" width="49" height="53.5"/>
                                                                    <subviews>
                                                                        <button opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="1000" horizontalCompressionResistancePriority="1000" layoutMarginsFollowReadableWidth="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="LEw-Uq-ED
                                                                            <rect key="frame" x="0.0" y="0.0" width="49" height="30"/>
                                                                            <fontDescription key="fontDescription" style="UICTFontTextStyleCallout"/>
                                                                            <inset key="contentEdgeInsets" minX="8" minY="5" maxX="8" maxY="5"/>
                                                                            <state key="normal" title="收藏">
                                                                                <color key="titleColor" red="0.0" green="0.47843137250000001" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                                            </state>
                                                                            <connections>
                                                                                <action selector="collectButtonPressed:" destination="FHk-HP-xas" eventType="touchUpInside" id="hxZ-U0-0EY"/>
                                                                            </connections>
                                                                        </button>
                                                                    </subviews>
                                                                </stackView>
                                                            </subviews>
                                                        </stackView>
                                                        <stackView opaque="NO" contentMode="scaleToFill" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="21Y-Ru-Sjw" userLabel="Rating">
                                                            <rect key="frame" x="0.0" y="57.5" width="672" height="15"/>
                                                            <subviews>
                                                                <view contentMode="scaleToFill" horizontalHuggingPriority="253" verticalHuggingPriority="252" layoutMarginsFollowReadableWidth="YES" translatesAutoresizingMaskIntoConstraints="NO" id="8Jx-kM-zmN" customClass="CosmosView" customModule="Cosmos">
                                                                    <rect key="frame" x="0.0" y="0.0" width="79" height="15"/>
                                                                    <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                                    <constraints>
...
